--- a/assets/images/css/style.css
+++ b/assets/images/css/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 .progress {
-  background-color: #a0a0a0;
+  background-color: #EC1242;
   height: 4px;
   width: 0;
   border-radius: 2px;
