--- a/assets/images/css/style.css
+++ b/assets/images/css/style.css
@@ -14,6 +14,12 @@ body {
   background-color: #181818;
   font-size: 14px;
   min-width: 720px;
+  -ms-overflow-style: none; /* Hide scrollbar for IE & Edge */
+  scrollbar-width: none; /* Hide scrollbar for Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for Chrome, Safari and Opera */
 }
 
 #nowPlayingBarContainer {
@@ -394,7 +400,8 @@ body {
 }
 
 .tracklistContainer h2,
-.gridViewContainer h2 {
+.gridViewContainer h2,
+.artistsContainer h2 {
   text-align: center;
 }
 
@@ -404,4 +411,52 @@ body {
 
 [role="link"]:hover {
   color: #EC1242;
+}
+
+/* Search Page */
+
+.searchContainer {
+  background-color: #242424;
+  padding: 20px 28px;
+}
+
+.searchContainer h4 {
+  margin: 0;
+  font-weight: 500px;
+  font-size: 18px;
+}
+
+.searchContainer .searchInput {
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  color: #EC1242;
+  font-weight: 700px;
+  font-size: 65px;
+  letter-spacing: 2px;
+}
+
+input:focus {
+  outline: none;
+}
+
+.searchResultRow {
+  padding: 15px 10px;
+}
+
+.searchResultRow:hover {
+  background-color: #282828;
+  color: #EC1242;
+}
+
+/* .searchResultRow .artistName span {
+  color: white;
+} */
+
+.noResults {
+  display: block;
+  margin: 15px;
+  color: #EC1242;
+  font-size: 16px;
+  font-weight: 200;
 }
